all styling done in website

--- a/public/new_home.css
+++ b/public/new_home.css
@@ -82,7 +82,7 @@ ul li.checked::before {
 
 /* Style the header */
 .header {
-  background-color: #C7223B;
+  background-color: #6600ff;
   padding: 30px 40px;
   color: white;
   text-align: center;
